alignment fixed on add special date (remove tailwind.css)

--- a/css/style.css
+++ b/css/style.css
@@ -537,10 +537,6 @@ body.home-page {
         font-size: 14px;
     }
 
-    h1 {
-        font-size: 24px;
-    }
-
     h2 {
         font-size: 24px;
     }
